config/samples/tests/istio-test-resources.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: klm-watcher-gateway
  namespace: kcp-system
  labels:
    operator.kyma-project.io/watcher-gateway: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "listener.test.kyma.cloud.sap"
      port:
        name: http
        number: 80
        protocol: HTTP
---
